WIP: Create trail for doughnut falls in BCC.

--- a/index.html
+++ b/index.html
@@ -3,15 +3,94 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title></title>
-   <!-- <link rel="stylesheet" href="/css/master.css"> -->
-
-
-
+    <title>KevinUtah-TIY</title>
+   <link rel="stylesheet" href="css/master.css">
+   <link rel="stylesheet" href="../homepage/css/anchor.css">
   </head>
   <body>
 
-    <p>Hello World</p>
-    <!-- <script src=""></script> -->
+    <header>
+      <img id="snowshoe" src="../images/free-snowshoeing-image.png" alt="Snowshoeing image, free vector graphic">
+      <h1>Kevin J Black</h1>
+      <h2>Winter Trails of the Wasatch</h2>
+      <h3>HTML, CSS, JavaScript</h3>
+      <div class="navbar">
+        <ul class = "navigation">
+          <li class = "button"><a href="index.html" alt="Link for home page">Home</a></li>
+          <li class = "button">Millcreek Canyon</li>
+          <li class = "button">Big Cottonwood Canyon</li>
+          <li class = "button">Little Cottonwood Canyon</li>
+        </ul>
+
+      </div>
+    </header>
+
+    <main>
+      <div id="sidebar">
+        <h3>Gear</h3>
+        <ul class = "information">
+          <li>Men's Clothing</li>
+          <p><a href="http://blackdiamondequipment.com/en_US/apparel" target="_blank">Black Diamond</a></p>
+          <li><h4>Women's Clothing</h4></a></li>
+          <p><a href="http://blackdiamondequipment.com/en_US/womens-apparel" target="_blank">Black Diamond</a>
+          <li>Snowshoes</li>
+          <li>Poles</li>
+          <li>Hydration</li>
+          <li>Beacons</li>
+          <li>Things to consider</li>
+        </ul>
+      </div>
+
+      <div id="main">
+        <div id="mcc">
+          <h3>Millcreek Canyon</h3>
+          <ul>
+            <li>Scenic Overlook / Thaynes Canyon / Desolation Trail</li>
+            <li>Porter Fork</li>
+            <li>Churck Fork</li>
+            <li>Winter Road</li>
+            <!-- <li>Big and Little Water</li> -->
+            <li>Trails around the Yurt:  Big Water Trail, Little Water Trail, Old Red Pine Road Trail</li>
+          </ul>
+        </div>
+        <br>
+        <div id="bcc">
+          <h3>Big Cottonwood Canyon</h3>
+          <ul>
+            <li>Days Fork</li>
+            <li>Spruces Campground</li>
+            <li>Brighton: Silver Lake</li>
+          </ul>
+        </div>
+        <br>
+        <div id="lcc">
+          <h3>Little Cottonwood Canyon</h3>
+          <ul>
+            <li>1</li>
+            <li>2</li>
+            <li><a href="../the-canyons/lcc/maybird-lake/index.html" target="_blank" alt="Maybird Lake Trail">Maybird Lake Trail</a></li>
+            <li><a href="../the-canyons/lcc/red-pine-lake/index.html" target="_blank" alt="Red Pine Lake Trail">Red Pine Trail</a></li>
+            <li><a href="/Users/kevinjblack/pro/wk10-final-project/the-canyons/lcc/white-pine-lake/index.html" target="_blank" alt="White Pine Trail">White Pine Lake Trail</a></li>
+          </ul>
+        </div>
+
+      </div>
+    </main>
+
+    <div id="footer">
+      <footer>
+        <div>
+          <ul class="footer">
+            <li>Kevin J Black</li>
+            <li>Kevin J Black</li>
+            <li>Kevin J Black</li>
+            <li>Kevin J Black</li>
+            <li>Kevin J Black</li>
+          </ul>
+        </div>
+      </footer>
+    </div>
+
+    <script src="main.js"></script>
   </body>
 </html>
