feat(core) Complete all maps and troubleshoot the pages.

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>KevinUtah-TIY</title>
-   <link rel="stylesheet" href="css/master.css">
-   <link rel="stylesheet" href="../homepage/css/anchor.css">
+   <link rel="stylesheet" href="./css/master.css">
+   <link rel="stylesheet" href="./css/anchor.css">
   </head>
   <body>
 
     <header>
-      <img id="snowshoe" src="../images/free-snowshoeing-image.png" alt="Snowshoeing image, free vector graphic">
+      <img id="snowshoe" src="images/free-snowshoeing-image.png" alt="Snowshoeing image, free vector graphic">
       <h1>Kevin J Black</h1>
       <h2>Winter Trails of the Wasatch</h2>
       <h3>HTML, CSS, JavaScript</h3>
@@ -45,32 +45,35 @@
         <div id="mcc">
           <h3>Millcreek Canyon</h3>
           <ul>
-            <li>Scenic Overlook / Thaynes Canyon / Desolation Trail</li>
-            <li>Porter Fork</li>
-            <li>Churck Fork</li>
-            <li>Winter Road</li>
+            <li><a href="./the-canyons/mcc/scenic-overlook/index.html" target="_blank">Scenic Overlook along the Thaynes Canyon Trail</a></li>
+            <li><a href="./the-canyons/mcc/winter-road/index.html" target="_blank">Winter Road to the Big Winter Yurt</a> (Winter Gate along East Millcreek Canyon Road)</li>
+            <!-- <li>Churck Fork</li> -->
+            <!-- <li>Winter Road</li> -->
             <!-- <li>Big and Little Water</li> -->
-            <li>Trails around the Yurt:  Big Water Trail, Little Water Trail, Old Red Pine Road Trail</li>
+            <!-- <li>Trails around the Yurt:  Big Water Trail, Little Water Trail, Old Red Pine Road Trail</li> -->
           </ul>
         </div>
         <br>
         <div id="bcc">
           <h3>Big Cottonwood Canyon</h3>
           <ul>
-            <li>Days Fork</li>
-            <li>Spruces Campground</li>
-            <li>Brighton: Silver Lake</li>
+            <li><a href="./the-canyons/bcc/days-fork/index.html" target="_blank">Days Fork</a></li>
+            <li><a href="./the-canyons/bcc/doughnut-falls/index.html" target="_blank">Mill D South to Doughnut Falls</a></li>
+            <li><a href="./the-canyons/bcc/green-basin/index.html" target="_blank">Days Fork Trail to Green Basin</a></li>
+            <li><a href="./the-canyons/bcc/silver-lake/index.html" target="_blank">Brighton: Silver Lake</a></li>
+            <li><a href="./the-canyons/bcc/solitude-lake/index.html" target="_blank">Brighton: Silver Lake to Solitude Lake Trail</a></li>
+            <li><a href="./the-canyons/bcc/twin-lakes/index.html" target="_blank">Brighton: Silver Lake Twin Lakes Trail</a></li>
           </ul>
         </div>
         <br>
         <div id="lcc">
           <h3>Little Cottonwood Canyon</h3>
           <ul>
-            <li>1</li>
-            <li>2</li>
-            <li><a href="../the-canyons/lcc/maybird-lake/index.html" target="_blank" alt="Maybird Lake Trail">Maybird Lake Trail</a></li>
-            <li><a href="../the-canyons/lcc/red-pine-lake/index.html" target="_blank" alt="Red Pine Lake Trail">Red Pine Trail</a></li>
-            <li><a href="/Users/kevinjblack/pro/wk10-final-project/the-canyons/lcc/white-pine-lake/index.html" target="_blank" alt="White Pine Trail">White Pine Lake Trail</a></li>
+            <li><a href="./the-canyons/lcc/cecret-lake/index.html" target="_blank">Albion Basin Road to Cecret Lake</a></li>
+            <li><a href="./the-canyons/lcc/catherine-pass/index.html" target="_blank">Albion Basin Road to Catherine Pass or Sunset Peak</li>
+            <li><a href="./the-canyons/lcc/maybird-lake/index.html" target="_blank" alt="Maybird Lake Trail">Maybird Lake Trail</a></li>
+            <li><a href="./the-canyons/lcc/red-pine-lake/index.html" target="_blank" alt="Red Pine Lake Trail">Red Pine Trail</a></li>
+            <li><a href="./the-canyons/lcc/white-pine-lake/index.html" target="_blank" alt="White Pine Trail">White Pine Lake Trail</a></li>
           </ul>
         </div>
 
@@ -81,11 +84,11 @@
       <footer>
         <div>
           <ul class="footer">
-            <li>Kevin J Black</li>
-            <li>Kevin J Black</li>
-            <li>Kevin J Black</li>
-            <li>Kevin J Black</li>
-            <li>Kevin J Black</li>
+            <li>Advertisement #1</li>
+            <li>Advertisement #2</li>
+            <li>Advertisement #3</li>
+            <li>Advertisement #4</li>
+            <li>Advertisement #5</li>
           </ul>
         </div>
       </footer>
