--- a/the-canyons/bcc/twin-lakes/index.html
+++ b/the-canyons/bcc/twin-lakes/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Silver Lake</title>
+    <title>Twin Lakes</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.2/dist/leaflet.css" />
     <style>
        #map {
