feat(core) Add trail descriptions.  BCC-Days Fork Trail.

--- a/the-canyons/bcc/days-fork/index.html
+++ b/the-canyons/bcc/days-fork/index.html
@@ -55,6 +55,7 @@
         <!-- <li class="description"></li> -->
         <!-- <img class="weatherIcon" src="icons/01d.png"> -->
       </ul>
+      <p><a href="./trail-description.html" target="_blank" height="75%", width="75%">Trail Description<a/></p>
     </div>
 
     <div id="main">
