feat(core) Commit backlog of edits
Had git problems and did not realize they weren't being committed

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <li>Men's Clothing</li>
           <p><a href="http://blackdiamondequipment.com/en_US/apparel" target="_blank">Black Diamond</a></p>
           <li><h4>Women's Clothing</h4></a></li>
-          <p><a href="http://blackdiamondequipment.com/en_US/womens-apparel" target="_blank">Black Diamond</a>
+          <p><a href="http://blackdiamondequipment.com/en_US/womens-apparel" target="_blank">Black Diamond</a></p>
           <li>Snowshoes</li>
           <li>Poles</li>
           <li>Hydration</li>
@@ -45,7 +45,7 @@
         <div id="mcc">
           <h3>Millcreek Canyon</h3>
           <ul>
-            <li><a href="./the-canyons/mcc/scenic-overlook/index.html" target="_blank">Scenic Overlook along the Thaynes Canyon Trail</a></li>
+            <li><a href="./the-canyons/mcc/scenic-overlook/index.html" target="_blank">Desolation Trail to Scenic Overlook</a></li>
             <li><a href="./the-canyons/mcc/winter-road/index.html" target="_blank">Winter Road to the Big Winter Yurt</a> (Winter Gate along East Millcreek Canyon Road)</li>
             <!-- <li>Churck Fork</li> -->
             <!-- <li>Winter Road</li> -->
