--- a/the-canyons/bcc/days-fork/trail-description.html
+++ b/the-canyons/bcc/days-fork/trail-description.html
@@ -10,26 +10,69 @@
   <body>
 <h2>Days Fork Trail from Spruces Campground</h2>
 
-
+<hr>
 <h3>Directions:</h3>
+Spruces Campground sits 9.7 miles up Big Cottonwood Canyon. Park in the
+Spruces parking lot off to the south side of the road.  The lot sits just past the railroad-crossing road
+blocks. Park here.
+<br>
+<br>
 
 <h3>Trail Description:</h3>
+The trail takes off directly from the southwest corner of the Spruces parking lot. It
+winds south around a group of trees, and passes a restroom which is open for winter use.  Shortly
+after passing the restroom, you will pass a trail sign for Days Fork trail. Use these markers to make sure
+you’re on the right path, as there are a couple paths that head out from Spruces parking lot. The
+trail winds its way west and south after the sign as it climbs up Days Fork. At times the trail winds right
+through the trees while at other times it breaks out of the trees into open sections. You can’t go
+wrong as long as you make your way up the fork.  At 1.3 miles the trail passes beneath an
+avalan
+che shoot.  It is easy to tell where it has run before as the mountainside is bare of trees. The
+trail passes at the bottom of the avalan
+che run out, simply use caution. You will know you have
+reached Lower Meadow by the steep slopes that come in on your right while the path opens into a
+wider meadow area. Lower Meadows lies 1.6 miles from the trailhead.  Remember that going any
+further will be dangerous during unstable avalan
+che conditions. Return back down the fork to get to
+your car.
+<br>
+<br>
 
 <h3>Distance:</h3>
+3.2 miles out and back / 6 miles round trip
+<br>
+<br>
 
 <h3>Elevation Gain:</h3>
+Elevation at trailhead:  7400 ft<br>
+Elevation at Doughnut Falls:  8125 ft<br>
+Gain: 775 ft
+<br>
+<br>
 
 <h3>Trail Rating:</h3>
+Easy
+<br>
+<br>
 
 <h3></h3>
 
 <h3>Known Avalanche Locations:</h3>
+To Lower Meadow-low; Past Lower Meadow-high
+<br>
+<br>
 
 <h3>Parking Spaces:</h3>
+Yes
+<br>
+<br>
 
 <h3>Restroom Facilities:</h3>
+Yes
+<br>
+<br>
 
-
-    <script src=""></script>
+<p><em>Source:  <a href="http://www.snowshoeutah.com/PDF_Finished/Ch11_T27.pdf" target="_blank">www.snowshoeutah.com</a></em></p>
+    <!-- <script src=""></script> -->
   </body>
 </html>
