--- a/the-canyons/bcc/doughnut-falls/index.html
+++ b/the-canyons/bcc/doughnut-falls/index.html
@@ -59,7 +59,13 @@
 
     <div id="main">
       <body>
-        <h2>Mill D South / Doughnut Falls</h2>
+        <table width="100%">
+          <tr>
+            <td class="trailDescription"><h2>Mill D South / Doughnut Falls Trail</h2></td>
+          <td class="trailDescription" style="text-align:right"><p><a href="./trail-description.html" target="_blank">Trail Description</a></p></td>
+        </tr>
+      </table>
+        <!-- <h2>Mill D South / Doughnut Falls</h2> -->
         <!-- <h3>The map should be below here ... <hr></h3> -->
         <!-- <br> -->
         <div id="mapid"></div>
