--- a/the-canyons/bcc/green-basin/index.html
+++ b/the-canyons/bcc/green-basin/index.html
@@ -59,7 +59,12 @@
 
     <div id="main">
       <body>
-        <h2>Spruces Camp Ground / Days Fork Trail to Green Basin</h2>
+        <table width="100%">
+          <tr>
+            <td class="trailDescription"><h2>Spruces Camp Ground / Days Fork Trail to Green Basin</h2></td>
+            <td class="trailDescription" style="text-align:right"><p><a href="./trail-description.html" target="_blank">Trail Description</a></p></td>
+          </tr>
+        </table>
         <!-- <h3>The map should be below here ... <hr></h3> -->
         <!-- <br> -->
         <div id="mapid"></div>
