--- a/the-canyons/bcc/silver-lake/index.html
+++ b/the-canyons/bcc/silver-lake/index.html
@@ -19,7 +19,7 @@
   <body>
     <header>
       <h1>Winter Trails of the Wasatch</h1>
-      <h2>Little Cottonwood Canyon</h2>
+      <h2>Big Cottonwood Canyon</h2>
       <!-- <h3>Trails Around Brighton Lodge</h3> -->
       <ul>
         <!-- <li>White Pine Lake</li> -->
@@ -52,14 +52,18 @@
         <li id="windDirection"></li>
         <li id="humidity" id="pressure"></li>
         <li id="weather"></li>
-        <!-- <li class="description"></li> -->
-        <!-- <img class="weatherIcon" src="icons/01d.png"> -->
+
       </ul>
     </div>
 
     <div id="main">
       <body>
-        <h2>Albion Basin Road to Catherine Pass / Sunset Peak Trail</h2>
+        <table width="100%">
+          <tr>
+            <td class="trailDescription"><h2>Silver Lake Trail</h2></td>
+            <td class="trailDescription" style="text-align:right"><p><a href="./trail-description.html" target="_blank">Trail Description</a></p></td>
+          </tr>
+        </table>
         <!-- <h3>The map should be below here ... <hr></h3> -->
         <!-- <br> -->
         <div id="mapid"></div>
