--- a/the-canyons/bcc/twin-lakes/index.html
+++ b/the-canyons/bcc/twin-lakes/index.html
@@ -20,10 +20,6 @@
     <header>
       <h1>Winter Trails of the Wasatch</h1>
       <h2>Big Cottonwood Canyon</h2>
-      <!-- <h3>Trails Around Brighton Lodge</h3> -->
-      <ul>
-        <!-- <li>White Pine Lake</li> -->
-      </ul>
     </header>
 
     <div id="sidebar">
@@ -41,8 +37,7 @@
             </p>
       <hr>
       <br>
-      <!-- <p id="data">Data</p> -->
-      <!-- <h3>Show the Trail's Weather</h3> -->
+
       <ul>
         <li id="temp"></li>
         <li id="temp_min"></li>
@@ -52,21 +47,22 @@
         <li id="windDirection"></li>
         <li id="humidity" id="pressure"></li>
         <li id="weather"></li>
-        <!-- <li class="description"></li> -->
-        <!-- <img class="weatherIcon" src="icons/01d.png"> -->
       </ul>
     </div>
 
     <div id="main">
       <body>
-        <h2>Silver Lake Trail to Twin Lakes Trail</h2>
-        <!-- <h3>The map should be below here ... <hr></h3> -->
-        <!-- <br> -->
+        <table width="100%">
+          <tr>
+            <td class="trailDescription"><h2>Silver Lake Trail to Twin Lakes Trail</h2></td>
+            <td class="trailDescription" style="text-align:right"><p><a href="./trail-description.html" target="_blank">Trail Description</a></p></td>
+          </tr>
+        </table>
         <div id="mapid"></div>
-        <!-- <br><hr> -->
-        <!-- <h3>... and above here.</h3> -->
+      </body>
     </div>
-    </body>
+
+
 
     <!-- <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBtosU00NJFegvblUISrzuAwABYfRFkduI&callback=initMap">
