feat(core) Add links to homepage sidebar

--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
       <div id="sidebar">
         <h3>Gear</h3>
         <ul class = "information">
-          <li>Men's Clothing</li>
+          <li><h4>Men's Clothing</h4></li>
           <p><a href="http://blackdiamondequipment.com/en_US/apparel" target="_blank">Black Diamond</a></p>
-          <li><h4>Women's Clothing</h4></a></li>
+          <li><h4>Women's Clothing</h4></li>
           <p><a href="http://blackdiamondequipment.com/en_US/womens-apparel" target="_blank">Black Diamond</a></p>
-          <li>Snowshoes</li>
-          <li>Poles</li>
-          <li>Hydration</li>
-          <li>Beacons</li>
-          <li>Things to consider</li>
+          <li><a href="https://www.rei.com/c/snowshoes?r=c&ir=category%3Asnowshoes&page=1" target="_blank">Snowshoes at REI</a></li>
+          <li><a href="https://www.rei.com/search.html?q=snowshoeing+poles&ir=q%3Asnowshoeing+poles&page=1" target="_blank">Poles at REI</a></li>
+          <li><a href="" target="_blank">Hydration</a></li>
+          <li><a href="" target="_blank">Beacons</a></li>
+          <li><a href="" target="_blank">Things to consider</a></li>
         </ul>
       </div>
 
