--- a/the-canyons/lcc/red-pine-lake/index.html
+++ b/the-canyons/lcc/red-pine-lake/index.html
@@ -70,7 +70,7 @@
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBtosU00NJFegvblUISrzuAwABYfRFkduI&callback=initMap">
     </script> -->
       <script src="./js/leaflet.js"></script>
-      <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.js"></script>
 
       <script src="./js/weather.js"></script>
     <!-- <script src="main.js"></script> -->
