config(core) Check links; Check weather
Ensure the links go to the correct page
Ensure the weather shows the correct information

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
           <p><a href="http://blackdiamondequipment.com/en_US/womens-apparel" target="_blank">Black Diamond</a></p>
           <li><a href="https://www.rei.com/c/snowshoes?r=c&ir=category%3Asnowshoes&page=1" target="_blank">Snowshoes at REI</a></li>
           <li><a href="https://www.rei.com/search.html?q=snowshoeing+poles&ir=q%3Asnowshoeing+poles&page=1" target="_blank">Poles at REI</a></li>
-          <li><a href="" target="_blank">Hydration</a></li>
-          <li><a href="" target="_blank">Beacons</a></li>
-          <li><a href="" target="_blank">Things to consider</a></li>
+          <li><a href="https://www.rei.com/c/hiking-hydration-packs?r=c&ir=category%3Ahiking-hydration-packs&page=1" target="_blank">Hydration packs at REI</a></li>
+          <li><a href="https://www.rei.com/search.html?q=beacons&ir=q%3Abeacons&page=1" target="_blank">Beacons at REI</a></li>
+          <li><a href="http://www.snowshoemag.com/first-timers/" target="_blank">Things to consider from snowshoemag.com</a></li>
         </ul>
       </div>
 
