--- a/the-canyons/bcc/days-fork/trail-description.html
+++ b/the-canyons/bcc/days-fork/trail-description.html
@@ -45,7 +45,7 @@ your car.
 
 <h3>Elevation Gain:</h3>
 Elevation at trailhead:  7400 ft<br>
-Elevation at Doughnut Falls:  8125 ft<br>
+Elevation for Days Fork Trail:  8125 ft<br>
 Gain: 775 ft
 <br>
 <br>
@@ -72,7 +72,7 @@ Yes
 <br>
 <br>
 
-<p><em>Source:  <a href="http://www.snowshoeutah.com/PDF_Finished/Ch11_T27.pdf" target="_blank">www.snowshoeutah.com</a></em></p>
+<p><em>Source:  <a href="http://www.snowshoeutah.com/PDF_Finished/Ch11_T27.pdf" target="_blank">www.snowshoeutah.com</a> and <a href="http://www.hikesandlakes.com/bigcottonwoodcanyon.html" target="_blank">www.hikesandlakes.com/bigcottonwoodcanyon.html</a></em></p>
     <!-- <script src=""></script> -->
   </body>
 </html>
