--- a/the-canyons/bcc/green-basin/trail-description.html
+++ b/the-canyons/bcc/green-basin/trail-description.html
@@ -29,7 +29,7 @@ Park at Spruces Campground 9.7 miles up Big Cottonwood Canyon on the south side 
 
 <h3>Elevation Gain:</h3>
 Elevation at trailhead:  7500 ft<br>
-Elevation at Doughnut Falls:  8302 ft<br>
+Elevation at Green Basin:  8302 ft<br>
 Gain: 802 ft
 <br>
 <br>
@@ -56,7 +56,7 @@ Yes
 <br>
 <br>
 
-<p><em>Source:  <a href="http://www.snowshoeutah.com/PDF_Finished/Ch11_T27.pdf" target="_blank">www.snowshoeutah.com</a> and <a href="http://www.hikesandlakes.com/bigcottonwoodcanyon.html" target="_blank">www.hikesandlakes.com/bigcottonwoodcanyon.html</a></em></p>
+<p><em>Source:  <a href="http://www.snowshoeutah.com/PDF_Finished/Ch11_T33.pdf" target="_blank">www.snowshoeutah.com</a> and <a href="http://www.hikesandlakes.com/bigcottonwoodcanyon.html" target="_blank">www.hikesandlakes.com/bigcottonwoodcanyon.html</a></em></p>
     <!-- <script src=""></script> -->
   </body>
 </html>
