--- a/the-canyons/bcc/twin-lakes/trail-description.html
+++ b/the-canyons/bcc/twin-lakes/trail-description.html
@@ -33,7 +33,7 @@ Park here or in the overflow parking to the northeast of the visitor center.<br>
 <br>
 
 <h3>Trail Rating:</h3>
-Easy around Silver Lake, then I would call it difficult to get to Twin Lakes.  
+Easy around Silver Lake, then I would call it difficult to get to Twin Lakes.
 <br>
 <br>
 
@@ -54,7 +54,7 @@ Yes
 <br>
 <br>
 
-<p><em>Source:  <a href="http://www.snowshoeutah.com/PDF_Finished/Ch11_T27.pdf" target="_blank">www.snowshoeutah.com</a> and <a href="http://www.hikesandlakes.com/bigcottonwoodcanyon.html" target="_blank">www.hikesandlakes.com/bigcottonwoodcanyon.html</a></em></p>
+<p><em>Source:  <a href="http://www.snowshoeutah.com/Table-of-Contents.html" target="_blank">www.snowshoeutah.com</a> and <a href="http://www.hikesandlakes.com/bigcottonwoodcanyon.html" target="_blank">www.hikesandlakes.com/bigcottonwoodcanyon.html</a></em></p>
     <!-- <script src=""></script> -->
   </body>
 </html>
