--- a/the-canyons/lcc/catherine-pass/trail-description.html
+++ b/the-canyons/lcc/catherine-pass/trail-description.html
@@ -70,7 +70,7 @@ No
 <br>
 <br>
 
-<p><em>Source:  <a href="http://www.snowshoeutah.com/PDF_Finished/Ch11_T27.pdf" target="_blank">www.snowshoeutah.com</a> and <a href="http://www.hikesandlakes.com/bigcottonwoodcanyon.html" target="_blank">www.hikesandlakes.com/bigcottonwoodcanyon.html</a></em></p>
+<p><em>Source:  <a href="http://www.snowshoeutah.com/PDF_Finished/Ch12_T42.pdf" target="_blank">www.snowshoeutah.com</a> and <a href="http://www.hikesandlakes.com/littlecottonwoodcanyon.html" target="_blank">www.hikesandlakes.com/littlecottonwoodcanyon.html</a></em></p>
     <!-- <script src=""></script> -->
   </body>
 </html>
