--- a/the-canyons/lcc/red-pine-lake/trail-description.html
+++ b/the-canyons/lcc/red-pine-lake/trail-description.html
@@ -38,7 +38,7 @@ About 8 miles roundtrip
 
 <h3>Elevation Gain:</h3>
 Elevation at trailhead:  7700 ft<br>
-Elevation at Doughnut Falls:  9700 ft<br>
+Elevation at White Pine Lake:  9700 ft<br>
 Gain: 2000 ft
 <br>
 <br>
@@ -63,7 +63,7 @@ Yes
 <br>
 <br>
 
-<p><em>Source:  <a href="http://www.snowshoeutah.com/PDF_Finished/Ch11_T27.pdf" target="_blank">www.snowshoeutah.com</a> and <a href="http://www.hikesandlakes.com/bigcottonwoodcanyon.html" target="_blank">www.hikesandlakes.com/bigcottonwoodcanyon.html</a></em></p>
+<p><em>Source:  <a href="http://www.snowshoeutah.com/PDF_Finished/Ch12_T41.pdf" target="_blank">www.snowshoeutah.com</a> and <a href="http://www.hikesandlakes.com/littlecottonwoodcanyon.html" target="_blank">www.hikesandlakes.com/littlecottonwoodcanyon.html</a></em></p>
     <!-- <script src=""></script> -->
   </body>
 </html>
