--- a/the-canyons/mcc/scenic-overlook/trail-description.html
+++ b/the-canyons/mcc/scenic-overlook/trail-description.html
@@ -55,7 +55,7 @@ Yes
 <br>
 <br>
 
-<p><em>Source:  <a href="http://www.snowshoeutah.com/PDF_Finished/Ch11_T27.pdf" target="_blank">www.snowshoeutah.com</a> and <a href="http://www.hikesandlakes.com/bigcottonwoodcanyon.html" target="_blank">www.hikesandlakes.com/bigcottonwoodcanyon.html</a></em></p>
+<p><em>Source:  <a href="http://www.snowshoeutah.com/PDF_Finished/Ch10_T19.pdf" target="_blank">www.snowshoeutah.com</a> and <a href="http://www.hikesandlakes.com/millcreekcanyon.html" target="_blank">www.hikesandlakes.com/millcreekcanyon.html</a></em></p>
     <!-- <script src=""></script> -->
   </body>
 </html>
