--- a/the-canyons/mcc/winter-road/trail-description.html
+++ b/the-canyons/mcc/winter-road/trail-description.html
@@ -13,7 +13,7 @@
 <hr>
 <h3>Directions:</h3>
 Maple Grove Picnic area sits five miles up Mill Creek canyon. Parking is available
-at the gate.  No motorized access allowed beyond the winter gate.  From the winter gate, 
+at the gate.  No motorized access allowed beyond the winter gate.  From the winter gate,
 <br>
 <br>
 
@@ -55,7 +55,7 @@ Yes
 <br>
 <br>
 
-<p><em>Source:  <a href="http://www.snowshoeutah.com/PDF_Finished/Ch11_T27.pdf" target="_blank">www.snowshoeutah.com</a> and <a href="http://www.hikesandlakes.com/bigcottonwoodcanyon.html" target="_blank">www.hikesandlakes.com/bigcottonwoodcanyon.html</a></em></p>
+<p><em>Source:  <a href="http://www.snowshoeutah.com/PDF_Finished/Ch10_T17.pdf" target="_blank">www.snowshoeutah.com</a> and <a href="http://www.hikesandlakes.com/millcreekcanyon.html" target="_blank">www.hikesandlakes.com/millcreekcanyon.html</a></em></p>
     <!-- <script src=""></script> -->
   </body>
 </html>
