--- a/the-canyons/bcc/twin-lakes/index.html
+++ b/the-canyons/bcc/twin-lakes/index.html
@@ -61,16 +61,7 @@
         <div id="mapid"></div>
       </body>
     </div>
-
-
-
-    <!-- <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBtosU00NJFegvblUISrzuAwABYfRFkduI&callback=initMap">
-    </script> -->
       <script src="./js/leaflet.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.js"></script>
-
-      <script src="./js/weather.js"></script>
-    <!-- <script src="main.js"></script> -->
-  </body>
+      <script src="./js/weather.js"></script>  </body>
 </html>
