--- a/the-canyons/lcc/cecret-lake/index.html
+++ b/the-canyons/lcc/cecret-lake/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta http-equiv="Content-Language" content="en-US">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Cecret Lake</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.2/dist/leaflet.css" />
